# app

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  R.MD  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
backend/apps/administration/: admin.py  apps.py  audit.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/ai/: admin.py  apps.py  client.py  models.py  recommendations.py  services.py  urls.py  views.py
backend/apps/alerts/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/authentication/: admin.py  apps.py  emails.py  models.py  oauth.py  otp.py  serializers.py  tokens.py  totp.py  urls.py  views.py
backend/apps/billing/: admin.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/dashboard/: brief.py  services.py  tasks.py  urls.py  views.py
backend/apps/econcalendar/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/markets/: admin.py  analysis.py  apps.py  cache.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/news/: admin.py  apps.py  constants.py  models.py  pipeline.py  sentiment_backend.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/notifications/: admin.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/portfolios/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/rbac/: admin.py  apps.py  constants.py  models.py  permissions.py  services.py
backend/apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/watchlists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/common/: managers.py  mixins.py  utils.py
backend/config/: __init__.py  api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  prod.py  test.py
backend/core/: exceptions.py  logging.py  middleware.py  pagination.py  permissions.py  renderers.py  views.py
backend/integrations/market_data/: base.py  registry.py  synthetic.py  yahoo.py
backend/integrations/news/: base.py  registry.py  rss.py  synthetic.py
backend/integrations/payments/: base.py  mock.py  (+1 more)
backend/realtime/: auth.py  consumers.py  groups.py  publish.py  routing.py
backend/requirements/: base.txt  dev.txt
backend/search/: news_index.py
(+150 files in other folders)
