[project]
name = "finpulse-backend"
version = "0.1.0"
description = "FinPulse backend — Django REST + Channels + Celery"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4", "SIM"]
# B008: function calls in argument defaults (common in DRF).
# DJ012: model body ordering — conflicts with our objects/all_objects dual managers.
ignore = ["B008", "DJ012"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["migrations/", "tests/", "manage.py"]

# simplejwt ships loose/incorrect type hints (Token base, None defaults on view
# class attrs); treat it as untyped so our legitimate overrides type-check.
[[tool.mypy.overrides]]
module = ["rest_framework_simplejwt.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "--strict-markers --reuse-db --ds=config.settings.test"
testpaths = ["apps", "core", "common", "realtime"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["apps", "core", "common", "realtime", "integrations"]
omit = ["*/migrations/*", "*/tests/*", "manage.py", "config/asgi.py", "config/wsgi.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Run with: pytest --cov --cov-report=term-missing
